--- a/Makefile.Release
+++ b/Makefile.Release
@@ -128,12 +128,14 @@ compiler_rcc_clean:
 	-$(DEL_FILE) release/qrc_Resources.cpp
 release/qrc_Resources.cpp: Resources.qrc \
 		D:/DALIAA/QT/5.14.2/mingw73_32/bin/rcc.exe \
+		img/photo-1483401757487-2ced3fa77952.jpg \
+		img/2.png \
 		img/jar-file.png \
+		img/500_F_177067467_Xy3aWsMVQP2Sif8StiIViGzdgz3f2ppQ.jpg \
 		img/document.png \
 		img/file.png \
-		img/background-ppt-background-2003905.jpg \
-		img/WhatsApp\ Image\ 2020-05-17\ at\ 07.35.51.jpeg \
-		img/51303ee1-c6fc-4b5a-9026-271fe2a258f3.jpg
+		img/1.png \
+		img/interface.png
 	'D:\DALIAA\QT\5.14.2\mingw73_32\bin\rcc.exe' -name Resources Resources.qrc -o release/qrc_Resources.cpp
 
 compiler_moc_predefs_make_all: release/moc_predefs.h
@@ -623,20 +625,15 @@ release/features.o: features.cpp features.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qdesktopwidget.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qguiapplication.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qinputmethod.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QGroupBox \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qgroupbox.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qframe.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QLabel \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlabel.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qframe.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QPushButton \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qpushbutton.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qabstractbutton.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qicon.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QVBoxLayout \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qboxlayout.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlayout.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlayoutitem.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qgridlayout.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QToolButton \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtoolbutton.h \
 		mainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
@@ -892,6 +889,8 @@ release/mainwindow.o: mainwindow.cpp mainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qabstractbutton.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QStatusBar \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qstatusbar.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QToolButton \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtoolbutton.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QWidget \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QFile \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMessageBox \
@@ -899,6 +898,11 @@ release/mainwindow.o: mainwindow.cpp mainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qdialog.h \
 		pch.h \
 		xml_tree.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QFileDialog \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qfiledialog.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qdir.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qfileinfo.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QDir \
 		features.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QDialog \
 		prettifing.h \
@@ -1060,7 +1064,115 @@ release/prettifing.o: prettifing.cpp prettifing.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/prettifing.o prettifing.cpp
 
 release/xml_cutter.o: xml_cutter.cpp pch.h \
-		xml_cutter.h
+		xml_cutter.h \
+		mainwindow.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgetsglobal.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtguiglobal.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qglobal.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qconfig-bootstrapped.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qconfig.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qtcore-config.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qsystemdetection.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qprocessordetection.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qcompilerdetection.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qtypeinfo.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qsysinfo.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qlogging.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qflags.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qatomic.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qbasicatomic.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qatomic_bootstrap.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qgenericatomic.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qatomic_cxx11.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qatomic_msvc.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qglobalstatic.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qmutex.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qnumeric.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qversiontagging.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtgui-config.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgets-config.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qwidget.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qwindowdefs.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qobjectdefs.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qnamespace.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qobjectdefs_impl.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qwindowdefs_win.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qobject.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstring.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qchar.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qbytearray.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qrefcount.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qarraydata.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstringliteral.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstringalgorithms.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstringview.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstringbuilder.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qlist.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qalgorithms.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qiterator.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qhashfunctions.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qpair.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qvector.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qcontainertools_impl.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qpoint.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qbytearraylist.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstringlist.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qregexp.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qstringmatcher.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qcoreevent.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qscopedpointer.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qmetatype.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qvarlengtharray.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qcontainerfwd.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qobject_impl.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qmargins.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpaintdevice.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qrect.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qsize.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpalette.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qcolor.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qrgb.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qrgba64.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qbrush.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qmatrix.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpolygon.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qregion.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qdatastream.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qiodevice.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qline.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtransform.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpainterpath.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qimage.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpixelformat.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpixmap.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qsharedpointer.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qshareddata.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qhash.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qsharedpointer_impl.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qfont.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qfontmetrics.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qfontinfo.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qsizepolicy.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qcursor.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qkeysequence.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qevent.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qvariant.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qmap.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qdebug.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qtextstream.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qlocale.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qset.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qcontiguouscache.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qurl.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qurlquery.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qfile.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qfiledevice.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qvector2d.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtouchdevice.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtabwidget.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qicon.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/xml_cutter.o xml_cutter.cpp
 
 release/xml_tree.o: xml_tree.cpp pch.h \
