--- a/Makefile.Release
+++ b/Makefile.Release
@@ -146,11 +146,16 @@ release/qrc_Resources.cpp: Resources.qrc \
 		D:/DALIAA/QT/5.14.2/mingw73_32/bin/rcc.exe \
 		img/photo-1483401757487-2ced3fa77952.jpg \
 		img/2.png \
+		img/file-type.png \
 		img/jar-file.png \
 		img/500_F_177067467_Xy3aWsMVQP2Sif8StiIViGzdgz3f2ppQ.jpg \
+		img/pencil.png \
 		img/document.png \
 		img/file.png \
 		img/1.png \
+		img/computer.png \
+		img/computer\ (1).png \
+		img/file\ (1).png \
 		img/interface.png
 	'D:\DALIAA\QT\5.14.2\mingw73_32\bin\rcc.exe' -name Resources Resources.qrc -o release/qrc_Resources.cpp
 
@@ -384,6 +389,7 @@ release/moc_json.cpp: json.h \
 	'D:\DALIAA\QT\5.14.2\mingw73_32\bin\moc.exe' $(DEFINES) --include C:/Users/user/Documents/test/release/moc_predefs.h -ID:/DALIAA/QT/5.14.2/mingw73_32/mkspecs/win32-g++ -IC:/Users/user/Documents/test -ID:/DALIAA/QT/5.14.2/mingw73_32/include -ID:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets -ID:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui -ID:/DALIAA/QT/5.14.2/mingw73_32/include/QtANGLE -ID:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore -ID:/DALIAA/QT/Tools/mingw730_32/lib/gcc/i686-w64-mingw32/7.3.0/include/c++ -ID:/DALIAA/QT/Tools/mingw730_32/lib/gcc/i686-w64-mingw32/7.3.0/include/c++/i686-w64-mingw32 -ID:/DALIAA/QT/Tools/mingw730_32/lib/gcc/i686-w64-mingw32/7.3.0/include/c++/backward -ID:/DALIAA/QT/Tools/mingw730_32/lib/gcc/i686-w64-mingw32/7.3.0/include -ID:/DALIAA/QT/Tools/mingw730_32/lib/gcc/i686-w64-mingw32/7.3.0/include-fixed -ID:/DALIAA/QT/Tools/mingw730_32/i686-w64-mingw32/include json.h -o release/moc_json.cpp
 
 release/moc_mainwindow.cpp: mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -879,6 +885,7 @@ release/features.o: features.cpp features.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QToolButton \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtoolbutton.h \
 		mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtabwidget.h \
@@ -887,6 +894,7 @@ release/features.o: features.cpp features.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMessageBox \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmessagebox.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QTextStream \
+		queries.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QFile
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/features.o features.cpp
 
@@ -1030,6 +1038,7 @@ release/json.o: json.cpp json.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlayoutitem.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qgridlayout.h \
 		mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtabwidget.h \
@@ -1041,6 +1050,7 @@ release/json.o: json.cpp json.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/json.o json.cpp
 
 release/main.o: main.cpp mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -1158,6 +1168,7 @@ release/main.o: main.cpp mainwindow.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/main.o main.cpp
 
 release/mainwindow.o: mainwindow.cpp mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -1292,7 +1303,6 @@ release/mainwindow.o: mainwindow.cpp mainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmessagebox.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qdialog.h \
 		pch.h \
-		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QFileDialog \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qfiledialog.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qdir.h \
@@ -1453,6 +1463,7 @@ release/prettifing.o: prettifing.cpp prettifing.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QTextStream \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QFile \
 		mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtabwidget.h \
@@ -1566,17 +1577,57 @@ release/queries.o: queries.cpp queries.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qvector2d.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtouchdevice.h \
 		ui_queries.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QVariant \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QApplication \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qapplication.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qcoreapplication.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/qeventloop.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qdesktopwidget.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qguiapplication.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qinputmethod.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QLineEdit \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlineedit.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qframe.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtextcursor.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtextformat.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qpen.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtextoption.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QPushButton \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qpushbutton.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qabstractbutton.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qicon.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QTextEdit \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtextedit.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qabstractscrollarea.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtextdocument.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QToolButton \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtoolbutton.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QVBoxLayout \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qboxlayout.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlayout.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qlayoutitem.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qgridlayout.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QWidget \
 		mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtabwidget.h \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qicon.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMessageBox \
-		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmessagebox.h
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmessagebox.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtCore/QString \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QPlainTextEdit \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qplaintextedit.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qabstracttextdocumentlayout.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtextlayout.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qglyphrun.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qrawfont.h \
+		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qfontdatabase.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/queries.o queries.cpp
 
 release/xml_cutter.o: xml_cutter.cpp xml_cutter.h \
 		mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -1692,6 +1743,7 @@ release/xml_cutter.o: xml_cutter.cpp xml_cutter.h \
 
 release/xml_to_Json.o: xml_to_Json.cpp xml_cutter.h \
 		mainwindow.h \
+		xml_tree.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/QMainWindow \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qmainwindow.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -1799,7 +1851,6 @@ release/xml_to_Json.o: xml_to_Json.cpp xml_cutter.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qtouchdevice.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtWidgets/qtabwidget.h \
 		D:/DALIAA/QT/5.14.2/mingw73_32/include/QtGui/qicon.h \
-		xml_tree.h \
 		xml_to_Json.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release/xml_to_Json.o xml_to_Json.cpp
 
